// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wml parser should ignore whitespace outside tags 1`] = `
Array [
  Object {
    "contents": Array [],
    "endTagToken": 5,
    "key": "Test",
    "startTagToken": 0,
    "tag": "Asset",
  },
]
`;

exports[`wml parser should parse a character tag correctly 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "endTagToken": 22,
        "fileURL": "testIcon.png",
        "key": "icon",
        "startTagToken": 14,
        "tag": "Image",
      },
      Object {
        "contents": Array [
          Object {
            "endTagToken": 25,
            "startTagToken": 25,
            "tag": "String",
            "value": "Tess",
          },
        ],
        "endTagToken": 26,
        "startTagToken": 23,
        "tag": "Name",
      },
      Object {
        "adjective": "hers",
        "endTagToken": 44,
        "object": "her",
        "possessive": "her",
        "reflexive": "herself",
        "startTagToken": 27,
        "subject": "she",
        "tag": "Pronouns",
      },
    ],
    "endTagToken": 45,
    "fileName": "Tess",
    "key": "Tess",
    "player": "testy",
    "startTagToken": 0,
    "tag": "Character",
    "zone": "Library",
  },
]
`;

exports[`wml parser should parse a map tag correctly 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "contents": Array [
          Object {
            "contents": Array [
              Object {
                "endTagToken": 16,
                "startTagToken": 16,
                "tag": "String",
                "value": "Test Map",
              },
            ],
            "endTagToken": 17,
            "startTagToken": 14,
            "tag": "Name",
          },
          Object {
            "endTagToken": 26,
            "fileURL": "https://test.com/imageTest.png",
            "key": "ImageTest",
            "startTagToken": 18,
            "tag": "Image",
          },
          Object {
            "contents": Array [],
            "endTagToken": 38,
            "key": "ABC",
            "startTagToken": 27,
            "tag": "Room",
            "x": 200,
            "y": 150,
          },
        ],
        "endTagToken": 39,
        "key": "TestMap",
        "startTagToken": 9,
        "tag": "Map",
      },
    ],
    "endTagToken": 40,
    "fileName": "test",
    "instance": true,
    "key": "Test",
    "startTagToken": 0,
    "tag": "Story",
  },
]
`;

exports[`wml parser should parse a single tag 1`] = `
Array [
  Object {
    "contents": Array [],
    "endTagToken": 5,
    "key": "Test",
    "startTagToken": 0,
    "tag": "Asset",
  },
]
`;

exports[`wml parser should parse a story tag correctly 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "contents": Array [
          Object {
            "contents": Array [
              Object {
                "endTagToken": 16,
                "startTagToken": 16,
                "tag": "String",
                "value": "Vortex",
              },
            ],
            "endTagToken": 17,
            "startTagToken": 14,
            "tag": "Name",
          },
          Object {
            "contents": Array [
              Object {
                "endTagToken": 20,
                "startTagToken": 20,
                "tag": "String",
                "value": "Vortex",
              },
            ],
            "endTagToken": 21,
            "startTagToken": 18,
            "tag": "Description",
          },
        ],
        "endTagToken": 22,
        "key": "ABC",
        "startTagToken": 9,
        "tag": "Room",
        "x": undefined,
        "y": undefined,
      },
    ],
    "endTagToken": 23,
    "fileName": "test",
    "instance": true,
    "key": "Test",
    "startTagToken": 0,
    "tag": "Story",
  },
]
`;

exports[`wml parser should parse elements correctly 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "contents": Array [
          Object {
            "as": "power",
            "endTagToken": 24,
            "key": "basePower",
            "startTagToken": 13,
            "tag": "Use",
            "type": "Variable",
          },
          Object {
            "endTagToken": 33,
            "key": "overview",
            "startTagToken": 25,
            "tag": "Use",
            "type": "Room",
          },
        ],
        "endTagToken": 34,
        "from": "BASE",
        "startTagToken": 8,
        "tag": "Import",
      },
      Object {
        "contents": Array [
          Object {
            "contents": Array [
              Object {
                "endTagToken": 42,
                "startTagToken": 42,
                "tag": "String",
                "value": "Vortex",
              },
            ],
            "endTagToken": 43,
            "startTagToken": 40,
            "tag": "Name",
          },
          Object {
            "contents": Array [
              Object {
                "endTagToken": 46,
                "startTagToken": 46,
                "tag": "Whitespace",
              },
              Object {
                "endTagToken": 49,
                "startTagToken": 47,
                "tag": "Space",
              },
              Object {
                "endTagToken": 50,
                "startTagToken": 50,
                "tag": "Whitespace",
              },
              Object {
                "endTagToken": 51,
                "startTagToken": 51,
                "tag": "String",
                "value": "Vortex",
              },
              Object {
                "endTagToken": 52,
                "startTagToken": 52,
                "tag": "Whitespace",
              },
              Object {
                "contents": Array [
                  Object {
                    "endTagToken": 58,
                    "startTagToken": 58,
                    "tag": "String",
                    "value": "(toggle)",
                  },
                ],
                "endTagToken": 59,
                "startTagToken": 53,
                "tag": "Link",
                "to": "toggleOpen",
              },
              Object {
                "endTagToken": 60,
                "startTagToken": 60,
                "tag": "Whitespace",
              },
            ],
            "endTagToken": 61,
            "startTagToken": 44,
            "tag": "Description",
          },
          Object {
            "contents": Array [
              Object {
                "endTagToken": 67,
                "startTagToken": 67,
                "tag": "String",
                "value": "vortex",
              },
            ],
            "endTagToken": 68,
            "from": "DEF",
            "startTagToken": 62,
            "tag": "Exit",
          },
        ],
        "endTagToken": 69,
        "key": "ABC",
        "startTagToken": 35,
        "tag": "Room",
        "x": undefined,
        "y": undefined,
      },
      Object {
        "contents": Array [
          Object {
            "contents": Array [
              Object {
                "contents": Array [
                  Object {
                    "endTagToken": 90,
                    "startTagToken": 90,
                    "tag": "String",
                    "value": "welcome",
                  },
                ],
                "endTagToken": 91,
                "startTagToken": 85,
                "tag": "Exit",
                "to": "DEF",
              },
            ],
            "endTagToken": 92,
            "key": "ABC",
            "startTagToken": 80,
            "tag": "Room",
            "x": undefined,
            "y": undefined,
          },
        ],
        "contextTag": "Asset",
        "dependencies": Array [
          Object {
            "endTagToken": 79,
            "on": "open",
            "startTagToken": 74,
            "tag": "Depend",
          },
        ],
        "endTagToken": 93,
        "if": "open",
        "startTagToken": 70,
        "tag": "If",
      },
      Object {
        "contents": Array [
          Object {
            "contents": Array [
              Object {
                "endTagToken": 101,
                "startTagToken": 101,
                "tag": "String",
                "value": "Welcome",
              },
            ],
            "endTagToken": 102,
            "startTagToken": 99,
            "tag": "Name",
          },
        ],
        "endTagToken": 103,
        "key": "DEF",
        "startTagToken": 94,
        "tag": "Room",
        "x": undefined,
        "y": undefined,
      },
      Object {
        "default": "false",
        "endTagToken": 112,
        "key": "open",
        "startTagToken": 104,
        "tag": "Variable",
      },
      Object {
        "endTagToken": 121,
        "key": "toggleOpen",
        "src": "open = !open",
        "startTagToken": 113,
        "tag": "Action",
      },
      Object {
        "dependencies": Array [
          Object {
            "endTagToken": 135,
            "on": "open",
            "startTagToken": 130,
            "tag": "Depend",
          },
        ],
        "endTagToken": 136,
        "key": "closed",
        "src": "!open",
        "startTagToken": 122,
        "tag": "Computed",
      },
    ],
    "endTagToken": 137,
    "fileName": "test",
    "key": "Test",
    "startTagToken": 0,
    "tag": "Asset",
  },
]
`;

exports[`wml parser should parse one level of nesting 1`] = `
Array [
  Object {
    "contents": Array [
      Object {
        "contents": Array [],
        "endTagToken": 10,
        "key": "ABC",
        "startTagToken": 5,
        "tag": "Room",
        "x": undefined,
        "y": undefined,
      },
    ],
    "endTagToken": 11,
    "key": "Test",
    "startTagToken": 0,
    "tag": "Asset",
  },
]
`;
